examples/ex3/test_cases/failing/check25_array_allocation_with_non_int.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    boolean field;

    public int func() {

        int [] array;

        array = new int[field];

        return 0;
    }
}